Improved and added the M4 demonstration for GTK3. Added some functions and enumerations to the configfile.

--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -168,6 +168,7 @@ FUNCTION_NAME = gtk_box_set_spacing, NONE, NONE, 2, WIDGET, INT
 FUNCTION_NAME = gtk_button_new, clicked, WIDGET, 0
 FUNCTION_NAME = gtk_button_new_with_label, clicked, WIDGET, 1, STRING
 FUNCTION_NAME = gtk_button_new_from_stock, clicked, WIDGET, 1, STRING
+FUNCTION_NAME = gtk_button_new_from_icon_name, clicked, WIDGET, 2, STRING, INT
 FUNCTION_NAME = gtk_button_new_with_mnemonic, clicked, WIDGET, 1, STRING
 FUNCTION_NAME = gtk_button_set_use_stock, NONE, NONE, 2, WIDGET, BOOL
 FUNCTION_NAME = gtk_button_set_label, NONE, NONE, 2, WIDGET, STRING
@@ -1056,6 +1057,16 @@ ENUM_NAME = GTK_SELECTION_SINGLE, 1
 ENUM_NAME = GTK_SELECTION_BROWSE, 2
 ENUM_NAME = GTK_SELECTION_MULTIPLE, 3
 ENUM_NAME = GTK_SELECTION_EXTENDED, 3
+#
+# Icon sizes (GTK3)
+#
+ENUM_NAME = GTK_ICON_SIZE_INVALID, 0
+ENUM_NAME = GTK_ICON_SIZE_MENU, 1
+ENUM_NAME = GTK_ICON_SIZE_SMALL_TOOLBAR, 2
+ENUM_NAME = GTK_ICON_SIZE_LARGE_TOOLBAR, 3
+ENUM_NAME = GTK_ICON_SIZE_BUTTON, 4
+ENUM_NAME = GTK_ICON_SIZE_DND, 5
+ENUM_NAME = GTK_ICON_SIZE_DIALOG, 6
 #
 # GDK enums
 #
