--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -50,6 +50,9 @@
 # XForms backend
 # LIB_NAME = libforms.so, libflimage.so, libformsGL.so
 #
+# Motif backend
+# LIB_NAME = libXm.so, libXt.so
+#
 # Console backend (ncurses)
 # LIB_NAME = libncurses.so, libform.so, libpanel.so, libmenu.so
 #
@@ -1457,6 +1460,12 @@ ENUM_NAME = ButtonRelease, 5
 #
 #---------------------------------------------------------------------------
 #
+# Some Motif calls
+#
+
+#
+#---------------------------------------------------------------------------
+#
 # Some ncurses calls
 #
 FUNCTION_NAME = filter, NONE, NONE, 0
@@ -1493,6 +1502,7 @@ FUNCTION_NAME = kill, NONE, INT, 2, INT, INT
 FUNCTION_NAME = write, NONE, INT, 3, INT, STRING, INT
 FUNCTION_NAME = fsync, NONE, INT, 1, INT
 FUNCTION_NAME = malloc, NONE, POINTER, 1, INT
+FUNCTION_NAME = calloc, NONE, POINTER, 2, INT, INT
 FUNCTION_NAME = free, NONE, NONE, 1, POINTER
 FUNCTION_NAME = printf, NONE, NONE, 2, STRING, POINTER
 FUNCTION_NAME = snprintf, NONE, NONE, 4, POINTER, INT, STRING, DOUBLE
