Updates in the Motif backend.

--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -1173,7 +1173,7 @@ ENUM_NAME = CAIRO_ANTIALIAS_BEST, 6
 #
 # XForms calls
 #
-FUNCTION_NAME = fl_bgn_form, NONE, WIDGET, 3, INT, INT, INT
+FUNCTION_NAME = fl_bgn_form, KeyPressMask, WIDGET, 3, INT, INT, INT
 FUNCTION_NAME = fl_end_form, NONE, NONE, 0
 FUNCTION_NAME = fl_show_form, NONE, LONG, 4, WIDGET, INT, INT, STRING
 FUNCTION_NAME = fl_hide_form, NONE, NONE, 1, WIDGET
@@ -1462,7 +1462,11 @@ ENUM_NAME = ButtonRelease, 5
 #
 # Some Motif calls
 #
-
+FUNCTION_NAME = XtSetLanguageProc, NONE, WIDGET, 3, NULL, NULL, NULL
+FUNCTION_NAME = XtManageChild, NONE, NONE, 1, WIDGET
+FUNCTION_NAME = XmGetFocusWidget, NONE, WIDGET, 1, WIDGET
+FUNCTION_NAME = XmStringCreateLocalized, NONE, WIDGET, 1, STRING
+FUNCTION_NAME = XmStringFree, NONE, NONE, 1, WIDGET
 #
 #---------------------------------------------------------------------------
 #
