More updates in the Motif backend.

--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -1460,13 +1460,28 @@ ENUM_NAME = ButtonRelease, 5
 #
 #---------------------------------------------------------------------------
 #
-# Some Motif calls
+# Some Motif/Xt calls
 #
-FUNCTION_NAME = XtSetLanguageProc, NONE, WIDGET, 3, NULL, NULL, NULL
-FUNCTION_NAME = XtManageChild, NONE, NONE, 1, WIDGET
 FUNCTION_NAME = XmGetFocusWidget, NONE, WIDGET, 1, WIDGET
 FUNCTION_NAME = XmStringCreateLocalized, NONE, WIDGET, 1, STRING
 FUNCTION_NAME = XmStringFree, NONE, NONE, 1, WIDGET
+FUNCTION_NAME = XtManageChild, NONE, NONE, 1, WIDGET
+FUNCTION_NAME = XtSetLanguageProc, NONE, WIDGET, 3, NULL, NULL, NULL
+FUNCTION_NAME = XtSetKeyboardFocus, NONE, NONE, 2, WIDGET, WIDGET
+FUNCTION_NAME = XtVaCreateManagedWidget, NONE, WIDGET, 4, STRING, CLASS, WIDGET, NULL
+FUNCTION_NAME = XtVaCreateWidget, NONE, WIDGET, 4, STRING, CLASS, WIDGET, NULL
+FUNCTION_NAME = XmCreateDropDownComboBox, NONE, WIDGET, 4, WIDGET, STRING, NULL, INT
+FUNCTION_NAME = XmComboBoxAddItem, NONE, NONE, 4, WIDGET, WIDGET, INT, BOOL
+#
+# Motif string equivalents
+#
+STR_NAME = XmNwidth, width
+STR_NAME = XmNheight, height
+STR_NAME = XmNx, x
+STR_NAME = XmNy, y
+STR_NAME = XmNlabelString, labelString
+STR_NAME = XmNactivateCallback, activateCallback
+STR_NAME = XmRString, String
 #
 #---------------------------------------------------------------------------
 #
