Updates in callback mechanism for Motif. Coloring.

--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -1462,16 +1462,17 @@ ENUM_NAME = ButtonRelease, 5
 #
 # Some Motif/Xt calls
 #
+FUNCTION_NAME = XmComboBoxAddItem, NONE, NONE, 4, WIDGET, WIDGET, INT, BOOL
+FUNCTION_NAME = XmCreateDropDownComboBox, NONE, WIDGET, 4, WIDGET, STRING, NULL, INT
 FUNCTION_NAME = XmGetFocusWidget, NONE, WIDGET, 1, WIDGET
 FUNCTION_NAME = XmStringCreateLocalized, NONE, WIDGET, 1, STRING
 FUNCTION_NAME = XmStringFree, NONE, NONE, 1, WIDGET
 FUNCTION_NAME = XtManageChild, NONE, NONE, 1, WIDGET
+FUNCTION_NAME = XtParent, NONE, WIDGET, 1, WIDGET
 FUNCTION_NAME = XtSetLanguageProc, NONE, WIDGET, 3, NULL, NULL, NULL
 FUNCTION_NAME = XtSetKeyboardFocus, NONE, NONE, 2, WIDGET, WIDGET
 FUNCTION_NAME = XtVaCreateManagedWidget, NONE, WIDGET, 4, STRING, CLASS, WIDGET, NULL
 FUNCTION_NAME = XtVaCreateWidget, NONE, WIDGET, 4, STRING, CLASS, WIDGET, NULL
-FUNCTION_NAME = XmCreateDropDownComboBox, NONE, WIDGET, 4, WIDGET, STRING, NULL, INT
-FUNCTION_NAME = XmComboBoxAddItem, NONE, NONE, 4, WIDGET, WIDGET, INT, BOOL
 #
 # Motif string equivalents
 #
@@ -1482,6 +1483,171 @@ STR_NAME = XmNy, y
 STR_NAME = XmNlabelString, labelString
 STR_NAME = XmNactivateCallback, activateCallback
 STR_NAME = XmRString, String
+STR_NAME = XmNshadowThickness, shadowThickness
+STR_NAME = XmNbackground, background
+STR_NAME = XmNforeground, foreground
+STR_NAME = XmNfontList, fontList
+#
+# Motif enums
+#
+ENUM_NAME = XmRESIZE_NONE, 0
+ENUM_NAME = XmRESIZE_GROW, 1
+ENUM_NAME = XmRESIZE_ANY, 2
+ENUM_NAME = XmATTACH_NONE, 0
+ENUM_NAME = XmATTACH_FORM, 1
+ENUM_NAME = XmATTACH_OPPOSITE_FORM, 2
+ENUM_NAME = XmATTACH_WIDGET, 3
+ENUM_NAME = XmATTACH_OPPOSITE_WIDGET, 4
+ENUM_NAME = XmATTACH_POSITION, 5
+ENUM_NAME = XmATTACH_SELF, 6
+#
+# Color defs from X11 rgb.txt
+#
+ENUM_NAME = AliceBlue, 0xF0F8FF
+ENUM_NAME = AntiqueWhite, 0xFAEBD7
+ENUM_NAME = Aqua, 0x00FFFF
+ENUM_NAME = Aquamarine, 0x7FFFD4
+ENUM_NAME = Azure, 0xF0FFFF
+ENUM_NAME = Beige, 0xF5F5DC
+ENUM_NAME = Bisque, 0xFFE4C4
+ENUM_NAME = Black, 0x000000
+ENUM_NAME = BlanchedAlmond, 0xFFEBCD
+ENUM_NAME = Blue, 0x0000FF
+ENUM_NAME = BlueViolet, 0x8A2BE2
+ENUM_NAME = Brown, 0xA52A2A
+ENUM_NAME = Burlywood, 0xDEB887
+ENUM_NAME = CadetBlue, 0x5F9EA0
+ENUM_NAME = Chartreuse, 0x7FFF00
+ENUM_NAME = Chocolate, 0xD2691E
+ENUM_NAME = Coral, 0xFF7F50
+ENUM_NAME = Cornflower, 0x6495ED
+ENUM_NAME = Cornsilk, 0xFFF8DC
+ENUM_NAME = Crimson, 0xDC143C
+ENUM_NAME = Cyan, 0x00FFFF
+ENUM_NAME = DarkBlue, 0x00008B
+ENUM_NAME = DarkCyan, 0x008B8B
+ENUM_NAME = DarkGoldenrod, 0xB8860B
+ENUM_NAME = DarkGray, 0xA9A9A9
+ENUM_NAME = DarkGreen, 0x006400
+ENUM_NAME = DarkKhaki, 0xBDB76B
+ENUM_NAME = DarkMagenta, 0x8B008B
+ENUM_NAME = DarkOliveGreen, 0x556B2F
+ENUM_NAME = DarkOrange, 0xFF8C00
+ENUM_NAME = DarkOrchid, 0x9932CC
+ENUM_NAME = DarkRed, 0x8B0000
+ENUM_NAME = DarkSalmon, 0xE9967A
+ENUM_NAME = DarkSeaGreen, 0x8FBC8F
+ENUM_NAME = DarkSlateBlue, 0x483D8B
+ENUM_NAME = DarkSlateGray, 0x2F4F4F
+ENUM_NAME = DarkTurquoise, 0x00CED1
+ENUM_NAME = DarkViolet, 0x9400D3
+ENUM_NAME = DeepPink, 0xFF1493
+ENUM_NAME = DeepSkyBlue, 0x00BFFF
+ENUM_NAME = DimGray, 0x696969
+ENUM_NAME = DodgerBlue, 0x1E90FF
+ENUM_NAME = Firebrick, 0xB22222
+ENUM_NAME = FloralWhite, 0xFFFAF0
+ENUM_NAME = ForestGreen, 0x228B22
+ENUM_NAME = Fuchsia, 0xFF00FF
+ENUM_NAME = Gainsboro, 0xDCDCDC
+ENUM_NAME = GhostWhite, 0xF8F8FF
+ENUM_NAME = Gold, 0xFFD700
+ENUM_NAME = Goldenrod, 0xDAA520
+ENUM_NAME = Gray, 0xBEBEBE
+ENUM_NAME = WebGray, 0x808080
+ENUM_NAME = Green, 0x00FF00
+ENUM_NAME = WebGreen, 0x008000
+ENUM_NAME = GreenYellow, 0xADFF2F
+ENUM_NAME = Honeydew, 0xF0FFF0
+ENUM_NAME = HotPink, 0xFF69B4
+ENUM_NAME = IndianRed, 0xCD5C5C
+ENUM_NAME = Indigo, 0x4B0082
+ENUM_NAME = Ivory, 0xFFFFF0
+ENUM_NAME = Khaki, 0xF0E68C
+ENUM_NAME = Lavender, 0xE6E6FA
+ENUM_NAME = LavenderBlush, 0xFFF0F5
+ENUM_NAME = LawnGreen, 0x7CFC00
+ENUM_NAME = LemonChiffon, 0xFFFACD
+ENUM_NAME = LightBlue, 0xADD8E6
+ENUM_NAME = LightCoral, 0xF08080
+ENUM_NAME = LightCyan, 0xE0FFFF
+ENUM_NAME = LightGoldenrod, 0xFAFAD2
+ENUM_NAME = LightGray, 0xD3D3D3
+ENUM_NAME = LightGreen, 0x90EE90
+ENUM_NAME = LightPink, 0xFFB6C1
+ENUM_NAME = LightSalmon, 0xFFA07A
+ENUM_NAME = LightSeaGreen, 0x20B2AA
+ENUM_NAME = LightSkyBlue, 0x87CEFA
+ENUM_NAME = LightSlateGray, 0x778899
+ENUM_NAME = LightSteelBlue, 0xB0C4DE
+ENUM_NAME = LightYellow, 0xFFFFE0
+ENUM_NAME = Lime, 0x00FF00
+ENUM_NAME = LimeGreen, 0x32CD32
+ENUM_NAME = Linen, 0xFAF0E6
+ENUM_NAME = Magenta, 0xFF00FF
+ENUM_NAME = Maroon, 0xB03060
+ENUM_NAME = WebMaroon, 0x7F0000
+ENUM_NAME = MediumAquamarine, 0x66CDAA
+ENUM_NAME = MediumBlue, 0x0000CD
+ENUM_NAME = MediumOrchid, 0xBA55D3
+ENUM_NAME = MediumPurple, 0x9370DB
+ENUM_NAME = MediumSeaGreen, 0x3CB371
+ENUM_NAME = MediumSlateBlue, 0x7B68EE
+ENUM_NAME = MediumSpringGreen, 0x00FA9A
+ENUM_NAME = MediumTurquoise, 0x48D1CC
+ENUM_NAME = MediumVioletRed, 0xC71585
+ENUM_NAME = MidnightBlue, 0x191970
+ENUM_NAME = MintCream, 0xF5FFFA
+ENUM_NAME = MistyRose, 0xFFE4E1
+ENUM_NAME = Moccasin, 0xFFE4B5
+ENUM_NAME = NavajoWhite, 0xFFDEAD
+ENUM_NAME = NavyBlue, 0x000080
+ENUM_NAME = OldLace, 0xFDF5E6
+ENUM_NAME = Olive, 0x808000
+ENUM_NAME = OliveDrab, 0x6B8E23
+ENUM_NAME = Orange, 0xFFA500
+ENUM_NAME = OrangeRed, 0xFF4500
+ENUM_NAME = Orchid, 0xDA70D6
+ENUM_NAME = PaleGoldenrod, 0xEEE8AA
+ENUM_NAME = PaleGreen, 0x98FB98
+ENUM_NAME = PaleTurquoise, 0xAFEEEE
+ENUM_NAME = PaleVioletRed, 0xDB7093
+ENUM_NAME = PapayaWhip, 0xFFEFD5
+ENUM_NAME = PeachPuff, 0xFFDAB9
+ENUM_NAME = Peru, 0xCD853F
+ENUM_NAME = Pink, 0xFFC0CB
+ENUM_NAME = Plum, 0xDDA0DD
+ENUM_NAME = PowderBlue, 0xB0E0E6
+ENUM_NAME = Purple, 0xA020F0
+ENUM_NAME = WebPurple, 0x7F007F
+ENUM_NAME = RebeccaPurple, 0x663399
+ENUM_NAME = Red, 0xFF0000
+ENUM_NAME = RosyBrown, 0xBC8F8F
+ENUM_NAME = RoyalBlue, 0x4169E1
+ENUM_NAME = SaddleBrown, 0x8B4513
+ENUM_NAME = Salmon, 0xFA8072
+ENUM_NAME = SandyBrown, 0xF4A460
+ENUM_NAME = SeaGreen, 0x2E8B57
+ENUM_NAME = Seashell, 0xFFF5EE
+ENUM_NAME = Sienna, 0xA0522D
+ENUM_NAME = Silver, 0xC0C0C0
+ENUM_NAME = SkyBlue, 0x87CEEB
+ENUM_NAME = SlateBlue, 0x6A5ACD
+ENUM_NAME = SlateGray, 0x708090
+ENUM_NAME = Snow, 0xFFFAFA
+ENUM_NAME = SpringGreen, 0x00FF7F
+ENUM_NAME = SteelBlue, 0x4682B4
+ENUM_NAME = Tan, 0xD2B48C
+ENUM_NAME = Teal, 0x008080
+ENUM_NAME = Thistle, 0xD8BFD8
+ENUM_NAME = Tomato, 0xFF6347
+ENUM_NAME = Turquoise, 0x40E0D0
+ENUM_NAME = Violet, 0xEE82EE
+ENUM_NAME = Wheat, 0xF5DEB3
+ENUM_NAME = White, 0xFFFFFF
+ENUM_NAME = WhiteSmoke, 0xF5F5F5
+ENUM_NAME = Yellow, 0xFFFF00
+ENUM_NAME = YellowGreen, 0x9ACD32
 #
 #---------------------------------------------------------------------------
 #
