Changed default Motif font for error dialogue and debug panel. Support for variable argument lists.

--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -1,4 +1,3 @@
-#
 # This is an EXAMPLE config file containing API calls used by the GTK-server.
 #
 # When developing your own application, feel free to change any of the
@@ -1464,6 +1463,9 @@ ENUM_NAME = ButtonRelease, 5
 #
 FUNCTION_NAME = XmComboBoxAddItem, NONE, NONE, 4, WIDGET, WIDGET, INT, BOOL
 FUNCTION_NAME = XmCreateDropDownComboBox, NONE, WIDGET, 4, WIDGET, STRING, NULL, INT
+FUNCTION_NAME = XmFontListAppendEntry, NONE, WIDGET, 2, NULL, WIDGET
+FUNCTION_NAME = XmFontListEntryFree, NONE, NONE, 1, LONG
+FUNCTION_NAME = XmFontListEntryLoad, NONE, WIDGET, 4, WIDGET, STRING, ENUM, STRING
 FUNCTION_NAME = XmGetFocusWidget, NONE, WIDGET, 1, WIDGET
 FUNCTION_NAME = XmStringCreateLocalized, NONE, WIDGET, 1, STRING
 FUNCTION_NAME = XmStringFree, NONE, NONE, 1, WIDGET
@@ -1471,8 +1473,10 @@ FUNCTION_NAME = XtManageChild, NONE, NONE, 1, WIDGET
 FUNCTION_NAME = XtParent, NONE, WIDGET, 1, WIDGET
 FUNCTION_NAME = XtSetLanguageProc, NONE, WIDGET, 3, NULL, NULL, NULL
 FUNCTION_NAME = XtSetKeyboardFocus, NONE, NONE, 2, WIDGET, WIDGET
-FUNCTION_NAME = XtVaCreateManagedWidget, NONE, WIDGET, 4, STRING, CLASS, WIDGET, NULL
-FUNCTION_NAME = XtVaCreateWidget, NONE, WIDGET, 4, STRING, CLASS, WIDGET, NULL
+FUNCTION_NAME = XtVaCreateManagedWidget, NONE, WIDGET, 4, STRING, CLASS, WIDGET, VARARGS
+FUNCTION_NAME = XtVaCreateWidget, NONE, WIDGET, 4, STRING, CLASS, WIDGET, VARARGS
+FUNCTION_NAME = XtVaSetValues, NONE, NONE, 2, WIDGET, VARARGS
+FUNCTION_NAME = XtDisplay, NONE, WIDGET, 1, WIDGET
 #
 # Motif string equivalents
 #
@@ -1486,6 +1490,7 @@ STR_NAME = XmRString, String
 STR_NAME = XmNshadowThickness, shadowThickness
 STR_NAME = XmNbackground, background
 STR_NAME = XmNforeground, foreground
+STR_NAME = XmNborderColor, borderColor
 STR_NAME = XmNfontList, fontList
 #
 # Motif enums
@@ -1500,6 +1505,8 @@ ENUM_NAME = XmATTACH_WIDGET, 3
 ENUM_NAME = XmATTACH_OPPOSITE_WIDGET, 4
 ENUM_NAME = XmATTACH_POSITION, 5
 ENUM_NAME = XmATTACH_SELF, 6
+ENUM_NAME = XmFONT_IS_FONT, 0
+ENUM_NAME = XmFONT_IS_FONTSET, 1
 #
 # Color defs from X11 rgb.txt
 #
