Added mouse button callback events for Motif.

--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -1486,6 +1486,7 @@ STR_NAME = XmNx, x
 STR_NAME = XmNy, y
 STR_NAME = XmNlabelString, labelString
 STR_NAME = XmNactivateCallback, activateCallback
+STR_NAME = XmNinputCallback, inputCallback
 STR_NAME = XmRString, String
 STR_NAME = XmNshadowThickness, shadowThickness
 STR_NAME = XmNbackground, background
