More Motif classes. More widgets in demo script.

--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -1462,6 +1462,7 @@ ENUM_NAME = ButtonRelease, 5
 # Some Motif/Xt calls
 #
 FUNCTION_NAME = XmComboBoxAddItem, NONE, NONE, 4, WIDGET, WIDGET, INT, BOOL
+FUNCTION_NAME = XmCreateRadioBox, NONE, WIDGET, 4, WIDGET, STRING, NULL, INT
 FUNCTION_NAME = XmCreateDropDownComboBox, NONE, WIDGET, 4, WIDGET, STRING, NULL, INT
 FUNCTION_NAME = XmFontListAppendEntry, NONE, WIDGET, 2, NULL, WIDGET
 FUNCTION_NAME = XmFontListEntryFree, NONE, NONE, 1, LONG
