Updates in gtk_server_state for Motif.

--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -1462,22 +1462,28 @@ ENUM_NAME = ButtonRelease, 5
 # Some Motif/Xt calls
 #
 FUNCTION_NAME = XmComboBoxAddItem, NONE, NONE, 4, WIDGET, WIDGET, INT, BOOL
-FUNCTION_NAME = XmCreateRadioBox, NONE, WIDGET, 4, WIDGET, STRING, NULL, INT
+FUNCTION_NAME = XmCommandGetChild, NONE, WIDGET, 2, WIDGET, INT
+FUNCTION_NAME = XmCreateCommand, NONE, WIDGET, 4, WIDGET, STRING, NULL, INT
+FUNCTION_NAME = XmCreateDrawingArea, NONE, WIDGET, 4, WIDGET, STRING, NULL, INT
 FUNCTION_NAME = XmCreateDropDownComboBox, NONE, WIDGET, 4, WIDGET, STRING, NULL, INT
+FUNCTION_NAME = XmCreateLabel, NONE, WIDGET, 4, WIDGET, STRING, NULL, INT
+FUNCTION_NAME = XmCreateRadioBox, NONE, WIDGET, 4, WIDGET, STRING, NULL, INT
 FUNCTION_NAME = XmFontListAppendEntry, NONE, WIDGET, 2, NULL, WIDGET
 FUNCTION_NAME = XmFontListEntryFree, NONE, NONE, 1, LONG
 FUNCTION_NAME = XmFontListEntryLoad, NONE, WIDGET, 4, WIDGET, STRING, ENUM, STRING
 FUNCTION_NAME = XmGetFocusWidget, NONE, WIDGET, 1, WIDGET
+FUNCTION_NAME = XmGetPixmap, NONE, WIDGET, 4, WIDGET, STRING, LONG, LONG
 FUNCTION_NAME = XmStringCreateLocalized, NONE, WIDGET, 1, STRING
 FUNCTION_NAME = XmStringFree, NONE, NONE, 1, WIDGET
+FUNCTION_NAME = XtDisplay, NONE, WIDGET, 1, WIDGET
 FUNCTION_NAME = XtManageChild, NONE, NONE, 1, WIDGET
 FUNCTION_NAME = XtParent, NONE, WIDGET, 1, WIDGET
+FUNCTION_NAME = XtScreen, NONE, WIDGET, 1, WIDGET
 FUNCTION_NAME = XtSetLanguageProc, NONE, WIDGET, 3, NULL, NULL, NULL
 FUNCTION_NAME = XtSetKeyboardFocus, NONE, NONE, 2, WIDGET, WIDGET
 FUNCTION_NAME = XtVaCreateManagedWidget, NONE, WIDGET, 4, STRING, CLASS, WIDGET, VARARGS
 FUNCTION_NAME = XtVaCreateWidget, NONE, WIDGET, 4, STRING, CLASS, WIDGET, VARARGS
 FUNCTION_NAME = XtVaSetValues, NONE, NONE, 2, WIDGET, VARARGS
-FUNCTION_NAME = XtDisplay, NONE, WIDGET, 1, WIDGET
 #
 # Motif string equivalents
 #
@@ -1494,6 +1500,11 @@ STR_NAME = XmNbackground, background
 STR_NAME = XmNforeground, foreground
 STR_NAME = XmNborderColor, borderColor
 STR_NAME = XmNfontList, fontList
+STR_NAME = XmNtextFontList, textFontList
+STR_NAME = XmNlabelFontList, labelFontList
+STR_NAME = XmNbuttonFontList, buttonFontList
+STR_NAME = XmNlabelType, labelType
+STR_NAME = XmNlabelPixmap, labelPixmap
 #
 # Motif enums
 #
@@ -1509,6 +1520,34 @@ ENUM_NAME = XmATTACH_POSITION, 5
 ENUM_NAME = XmATTACH_SELF, 6
 ENUM_NAME = XmFONT_IS_FONT, 0
 ENUM_NAME = XmFONT_IS_FONTSET, 1
+ENUM_NAME = XmDIALOG_NONE, 0
+ENUM_NAME = XmDIALOG_APPLY_BUTTON, 1
+ENUM_NAME = XmDIALOG_CANCEL_BUTTON, 2
+ENUM_NAME = XmDIALOG_DEFAULT_BUTTON, 3
+ENUM_NAME = XmDIALOG_OK_BUTTON, 4
+ENUM_NAME = XmDIALOG_FILTER_LABEL, 5
+ENUM_NAME = XmDIALOG_FILTER_TEXT, 6
+ENUM_NAME = XmDIALOG_HELP_BUTTON, 7
+ENUM_NAME = XmDIALOG_LIST, 8
+ENUM_NAME = XmDIALOG_LIST_LABEL, 9
+ENUM_NAME = XmDIALOG_MESSAGE_LABEL, 10
+ENUM_NAME = XmDIALOG_SELECTION_LABEL, 11
+ENUM_NAME = XmDIALOG_SYMBOL_LABEL, 12
+ENUM_NAME = XmDIALOG_TEXT, 13
+ENUM_NAME = XmDIALOG_SEPARATOR, 14
+ENUM_NAME = XmDIALOG_DIR_LIST, 15
+ENUM_NAME = XmDIALOG_DIR_LIST_LABEL, 16
+ENUM_NAME = XmDIALOG_WORK_AREA, 0
+ENUM_NAME = XmDIALOG_PROMPT, 1
+ENUM_NAME = XmDIALOG_SELECTION, 2
+ENUM_NAME = XmDIALOG_COMMAND, 3
+ENUM_NAME = XmDIALOG_FILE_SELECTION, 4
+ENUM_NAME = XmDIALOG_HISTORY_LIST, 8
+ENUM_NAME = XmDIALOG_COMMAND_TEXT, 13
+ENUM_NAME = XmPIXMAP, 1
+ENUM_NAME = XmSTRING, 2
+ENUM_NAME = XmPIXMAP_AND_STRING, 3
+ENUM_NAME = XmUNSPECIFIED_PIXMAP, 2
 #
 # Color defs from X11 rgb.txt
 #
