Some small improvements.

--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -1475,6 +1475,9 @@ FUNCTION_NAME = XmGetFocusWidget, NONE, WIDGET, 1, WIDGET
 FUNCTION_NAME = XmGetPixmap, NONE, WIDGET, 4, WIDGET, STRING, LONG, LONG
 FUNCTION_NAME = XmStringCreateLocalized, NONE, WIDGET, 1, STRING
 FUNCTION_NAME = XmStringFree, NONE, NONE, 1, WIDGET
+FUNCTION_NAME = XmTextGetString, NONE, STRING, 1, WIDGET
+FUNCTION_NAME = XmTextSetEditable, NONE, NONE, 2, WIDGET, BOOL
+FUNCTION_NAME = XmTextSetString, NONE, NONE, 2, WIDGET, STRING
 FUNCTION_NAME = XtDisplay, NONE, WIDGET, 1, WIDGET
 FUNCTION_NAME = XtManageChild, NONE, NONE, 1, WIDGET
 FUNCTION_NAME = XtParent, NONE, WIDGET, 1, WIDGET
@@ -1505,6 +1508,10 @@ STR_NAME = XmNlabelFontList, labelFontList
 STR_NAME = XmNbuttonFontList, buttonFontList
 STR_NAME = XmNlabelType, labelType
 STR_NAME = XmNlabelPixmap, labelPixmap
+STR_NAME = XmNleftOffset, leftOffset
+STR_NAME = XmNrightOffset, rightOffset
+STR_NAME = XmNtopOffset, topOffset
+STR_NAME = XmNbottomOffset, bottomOffset
 #
 # Motif enums
 #
@@ -1548,6 +1555,10 @@ ENUM_NAME = XmPIXMAP, 1
 ENUM_NAME = XmSTRING, 2
 ENUM_NAME = XmPIXMAP_AND_STRING, 3
 ENUM_NAME = XmUNSPECIFIED_PIXMAP, 2
+ENUM_NAME = XmNONE, 0
+ENUM_NAME = XmTAB_GROUP, 1
+ENUM_NAME = XmSTICKY_TAB_GROUP, 2
+ENUM_NAME = XmEXCLUSIVE_TAB_GROUP, 3
 #
 # Color defs from X11 rgb.txt
 #
