Updates in scripts and GTK-server config file.

--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -1512,6 +1512,10 @@ STR_NAME = XmNleftOffset, leftOffset
 STR_NAME = XmNrightOffset, rightOffset
 STR_NAME = XmNtopOffset, topOffset
 STR_NAME = XmNbottomOffset, bottomOffset
+STR_NAME = XmNtopAttachment, topAttachment
+STR_NAME = XmNleftAttachment, leftAttachment
+STR_NAME = XmNrightAttachment, rightAttachment
+STR_NAME = XmNbottomAttachment, bottomAttachment
 #
 # Motif enums
 #
