Added option in config file to open a max library number.

--- a/gtk-server/src/gtk-server.cfg
+++ b/gtk-server/src/gtk-server.cfg
@@ -114,9 +114,15 @@
 # Generic libs
 # LIB_NAME = msvcrt.dll
 #
+#---------------------------------------------------------------------------
+#
 # We can include an additional configfile here.
 #
 # INCLUDE = c:/gtk-server-extra.cfg
+#
+# Opening library files up to a maximum sequence number.
+#
+# SEQUENCE = 100
 #
 #---------------------------------------------------------------------------
 #
